--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,11 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; 
+  background: linear-gradient(rgb(60, 150, 153),#ffffff);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family:  source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
